# NeoRepro-MSR-Tool

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: Dockerfile  README.md  database.sqlite  entrypoint.sh  pyproject.toml
backend/backend/: database.py  database.sqlite  drill_queue_rpc.py  jobs_queue.py  main.py  ws_connection_manager.py
backend/backend/migrations/: env.py  script.py.mako
backend/backend/migrations/versions/: 7ac124de6ffe_added_started_status.py  9f9a6f0e5ac2_added_jobs_and_job_statuses.py
backend/backend/models/: jobs.py
backend/backend/routers/: driller_router.py  files.py  job_statuses.py  queries.py
backend/src/: alembic.ini  database.py  drill_queue_rpc.py  main.py  ws_connection_manager.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 9f9a6f0e5ac2_added_jobs_and_job_statuses.py  c60111c8977d_added_job_status_message_field.py
backend/src/routers/: driller_router.py  files.py  job_statuses.py
common/: README.md  pyproject.toml
common/common/: driller_config.py  util.py
common/common/models/: driller_config.py  jobs.py
common/tests/models/: test_driller_config.py
driller/: Dockerfile  pyproject.toml  pytest.ini
driller/configs/: pydriller.yml
driller/driller/: _test_client.py  basic_consumer.py  cloner.py  config_driller.py  configs.py  driller_config.py  example_async_publisher.py  main.py  settings.py  test_client.py  util.py
driller/driller/configs/: convert.py  mining-cost-awareness.yaml  new_config.yaml  output.yaml  output2.yaml  output_10.yaml  output_50.yaml  test.yaml
driller/driller/drillers/: driller.py  neo4j_pydriller_repository_storage.py  neo4j_storage.py  storage.py
driller/driller/scripts/: cost_awareness_codes.json  cost_awareness_labelling.py
driller/driller/settings/: custom.py  default.py
driller/driller/workers/: queue_driller_worker.py  queue_worker.py
driller/schemas/: config.yaml  example.yaml  schema copy.json  schema.json  test.py
driller/src/: cloner.py  main.py  util.py
driller/src/drillers/: driller.py  neo4j_pydriller_repository_storage.py  pydriller_repository_storage.py
driller/src/scripts/: cost_awareness_labelling.py
driller/src/settings/: default.py
driller/src/workers/: queue_driller_worker.py  queue_worker.py
driller/tests/: conftest.py  test_cloner.py  test_config.yaml  test_config_driller.py  test_driller.py  test_schema.py  test_utils.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1717254422768-0d350e4c0c00c.mjs
frontend/src/: App.vue  main.ts
frontend/src/assets/: initial.yaml
frontend/src/components/: CypherCodeMirror.vue  Editor.vue  Editor2.vue  FileTreeList.vue  FileTreeNode.vue  FileTreeSidebar.vue  JobInfoDialog.vue  JobStatusTable.vue  JobsListAppBar.vue  MarkdownViewer.vue  Neo4jDatabaseOverview.vue  QueriesSidebar.vue  QueryDataDialog.vue  SidebarNav.vue
frontend/src/composables/: useConfirmLeavePage.ts  useNeo4j.ts  useRepositoryList.ts  useSaveData.ts  useToast.ts  useYamlValidation.ts
frontend/src/repositores/: BaseRepository.ts  ConfigurationsRepository.ts  DatabaseBackupsRepository.ts  FileRepository.ts  JobsRepository.ts  JobsStatusRepository.ts  Pagination.ts  Repository.ts
frontend/src/router/: index.ts
frontend/src/stores/: neo4jStore.ts
frontend/src/views/: EditorView.vue  HomeView.vue  JobsCompleteListView.vue  JobsListView.vue  ManageDatabaseView.vue  QueryView.vue
queries/examples/: view_all_node_types.cql  view_all_relationship_types.cql
schemas/: schema.json
testing/: upload-data-codes.py  upload-data-plain.py
volumes/queries/examples/: match_all_commits.cypher
