[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew Rutherfoord <andrew.rutherfoord@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
aio-pika = "^9.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"