[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew Rutherfoord <andrew.rutherfoord@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../common", develop = true }
fastapi = "^0.111.0"
aio-pika = "^9.4.1"
sqlmodel = "^0.0.19"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"