[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Andrew Rutherfoord <andrew.rutherfoord@live.com>"]
readme = "README.md"
packages = [{include = "common", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
sqlmodel = "^0.0.19"

[tool.poetry.group.dev.dependencies]  
pytest = "^8.2.2"  
pytest-sugar = "*"  
pytest-cov = "*"  
black = "*"  
mypy = "*"  
ruff = "*"  
isort = "*"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
