[tool.poetry]
name = "driller"
version = "0.1.0"
description = ""
authors = ["Andrew Rutherfoord <andrew.rutherfoord@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
GraphRepo = {path = "../GraphRepo", develop = true}

aio-pika = "^9.4.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
driller-worker = "driller.main:exec"
test-client = "driller.test_client:exec"
