[tool.poetry]
name = "driller"
version = "0.1.0"
description = ""
authors = ["Andrew Rutherfoord <andrew.rutherfoord@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
aio-pika = "^9.4.1"

pydriller = "^2.6"
neo4j = "^5.20.0"
pyyaml = "^6.0.1"
[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
driller-worker = "driller.main:exec"
test-client = "driller.test_client:exec"
test-config-driller = "driller.config_driller:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
norecursedirs = ["repos"]